# asibot-main

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  README.txt
asibot/: CMakeLists.txt
asibot/doc/: Doxyfile  index.dox
asibot/examples/cpp/: CMakeLists.txt  README.txt  test_yarpmods.cpp
asibot/examples/exportable/: CMakeLists.txt  ExternalModules.cmake.template  README.txt
asibot/examples/matlab/: README.txt  test_yarpmods.m
asibot/examples/python/: README.txt  test_yarpmods.py
asibot/main/: CMakeLists.txt
asibot/main/app/: ymanager.ini
asibot/main/bindings/: CMakeLists.txt
asibot/main/conf/: FindACE.cmake
asibot/main/doc/: Doxyfile  Doxyfile.in  groups.dox  install.dox  install_cmake_on_ubuntu.dox  install_glib_on_ubuntu.dox  install_kdl_on_ubuntu.dox  install_on_ubuntu.dox  install_travis_on_ubuntu.dox  install_vision_on_ubuntu.dox  install_yarp_on_ubuntu.dox  main.dox  post_install.dox
asibot/sandbox/asibot_mobile/: interface.conf  interface.py
asibot/src/: CMakeLists.txt
asibot/src/libraries/: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  asibot-install-vision.md  asibot-install.md  asibot-main-install.md  asibot-post-install.md  asibot_install.md  asibot_install_cmake_on_ubuntu_14_10.md  asibot_install_cwiid_on_ubuntu_14_10.md  asibot_install_glib_on_ubuntu_14_10.md  asibot_install_kdl_on_ubuntu_14_10.md  asibot_install_on_ubuntu_14_10.md  asibot_install_opencv_on_ubuntu_14_10.md  asibot_install_openrave_on_ubuntu_14_10.md  asibot_install_travis_on_ubuntu_14_10.md  asibot_install_vision.md  asibot_install_vision_on_ubuntu_14_10.md  asibot_install_yarp_on_ubuntu_14_10.md  asibot_post_install.md  groups.dox  index.dox  install.bk  install.dox  install_cmake_on_ubuntu.dox  install_cwiid_on_ubuntu.dox  install_eigen2_on_ubuntu.dox  install_glib_on_ubuntu.dox  install_kdl_on_ubuntu.dox  install_on_ubuntu.dox  install_opencv_on_ubuntu.dox  install_openrave_on_ubuntu.dox  install_travis_on_ubuntu.dox  install_vision_on_ubuntu.dox  install_yarp_on_ubuntu.dox  main.dox  modify_asibot_main.dox  post_install.dox  swig.bk
doc/bibtex/: jardon2011personal.bib  victores.bib
doc/fig/help/: demoSetup.pptx
example/exportable/: CMakeLists.txt  ExternalModules.cmake.template
scripts/: CMakeLists.txt  setup.py.in
scripts/admin/: update-dox.sh
share/: CMakeLists.txt  ymanager.ini
share/asibotTasks/: doc.dox
share/asibotTasks/scripts/: asibotTasks.xml.template
share/cartesianServer/: CMakeLists.txt
share/cartesianServer/conf/: cartesianServer.ini  cartesianServerKdl.ini  cartesianServerPXA270.ini  cartesianServerRemoteRaveBot.ini  cartesianServer_yarpmotorgui.ini
share/colorDepth/: docKinect.dox  docSim.dox
share/colorSegmentor/: docSim.dox
share/kinematics/: CMakeLists.txt  armKinematics.ini
share/models/: asibot.kinbody.xml
share/models/ivs/: cocina.iv
share/openrave/: CMakeLists.txt
share/openrave/models/: VS.env.xml  asibot_kitchen_cameras2.env.xml  asibot_kitchen_kinect.env.xml  asibot_kitchen_robotDraw.env.xml  asibot_kitchen_v2.env.xml  asibot_kitchen_wheelchair.env.xml  felix.env.xml  ipcam.robot.xml  ipcamCart2.kinbody.xml  kinect.kinbody.xml  wheelchairLW.kinbody.xml  wheelchairLW.robot.xml  wheelchair_gafasAR.robot.xml
share/premultH/conf/: premultH.ini
share/ravebot/: CMakeLists.txt
share/ravebot/models/: VS2.env.xml  VS3.env.xml  asibot_kitchen.env.xml  asibot_kitchen_cameras.env.xml  asibot_kitchen_force6d.env.xml  asibot_kitchen_gafasAR.env.xml  asibot_kitchen_planning.env.xml  docking.kinbody.xml  ipcam.kinbody.xml  ipcamCart.robot.xml  ipcamCart3.kinbody.xml  ipcamCart3.robot.xml  wheelchair.kinbody.xml  wheelchair.robot.xml  wheelchair_gafasAR.kinbody.xml
share/robotDraw/scripts/: robotDraw.xml.template
share/testRaveBot/: CMakeLists.txt
share/userPrograms/: example.py  home.py
share/userPrograms/asibot/: functions.py
share/visionDepth/: docSim.dox
share/visionDepth/conf/: visionDepthXYpx.ini
share/visionDepth/scripts/: visionDepthKinect.xml.template  visionDepthKinectSelector.xml.template  visionDepthSim.xml.template
share/visualServo/scripts/: visualServo3.xml.template  visualServo4.xml.template
share/webInterface/: CMakeLists.txt  doc.dox
share/webInterface/asibot/: cartesian.html  execute.html  index.html  style.css  teach.html
share/webInterface/conf/: webInterface.ini
share/webInterface/html/: aTaskTab.js  assigner.html  cTaskTab.js  cartesian.html  connectionTab.js  joint.html  launcher.html  program.html  speech.html  testEqual.html  video.html
share/webInterface/scripts/: webInterface.xml.template
share/webInterface/user/: AsibotPy.py  template.py
share/wiimoteServer/: doc.dox
share/wiimoteServer/scripts/: wiimoteServer.xml.template
share/yarpmotorgui/: ymgRavebot.ini
src/libraries/: CMakeLists.txt  svn.externals
src/libraries/CartesianClient/: CMakeLists.txt  CartesianClient.cpp  CartesianClient.h
src/libraries/CartesianClientLib/: CMakeLists.txt  CartesianClient.cpp  CartesianClient.h
src/libraries/CartesianServer/: CMakeLists.txt  xRpcResponder.cpp
src/libraries/CartesianServerLib/: CMakeLists.txt  CartesianServer.cpp  CartesianServer.h  xCallbackPort.cpp  xCallbackPort.h  xRpcResponder.cpp  xRpcResponder.h
src/libraries/ColorClientLib/: CMakeLists.txt  ColorClient.cpp  ColorClient.hpp
src/libraries/ExtraMath/: CMakeLists.txt  InlineMath.hpp  TinyMath.cpp
src/libraries/RavePlugins/: CMakeLists.txt
src/libraries/RlPlugins/: CMakeLists.txt
src/libraries/TaskLib/: CMakeLists.txt  TaskBase.hpp  TaskDrinkSim.cpp  TaskGrabCan.cpp  TaskGrabCan.hpp  TaskGrabCanSim.cpp  TaskGrabCanSim.hpp
src/libraries/TestRaveBot/: CMakeLists.txt  TestRaveBot.cpp
src/libraries/TestRaveBotLib/: CMakeLists.txt  TestRaveBot.cpp  TestRaveBot.h
src/libraries/TinyMath/: CMakeLists.txt  TinyMath.cpp  TinyMath.hpp
src/libraries/TrajGen/: CMakeLists.txt
src/libraries/rlPlugins/: CMakeLists.txt
src/modules/: CMakeLists.txt
src/modules/asibotTasks/: CMakeLists.txt  TaskCatchTool.cpp  TaskCatchTool.h  TaskMakeUp.cpp  TaskMakeUp.h  (+6 more)
(+658 files in other folders)
