
# Order may be important here

add_subdirectory(cartesianServer)
add_subdirectory(findRedCan)
add_subdirectory(testRaveBot)
add_subdirectory(webInterfacePy)
add_subdirectory(webInterface)
add_subdirectory(wiimoteServer)
add_subdirectory(../../../contrib/pendant/webInterface2 ${CMAKE_CURRENT_BINARY_DIR}/webInterface2)

