# Copyright: Universidad Carlos III de Madrid (C) 2010
# Authors: Juan G. Victores

# Order may be important here

add_subdirectory(asibotTasks)
add_subdirectory(cartesianServer)
add_subdirectory(colorDepth)
add_subdirectory(colorSegmentor)
add_subdirectory(kinectPxToReal)
add_subdirectory(pointAtObjectServer)
add_subdirectory(premultH)
add_subdirectory(robotDraw)
add_subdirectory(testRaveBot)
add_subdirectory(visionSegmentor)
add_subdirectory(webInterface)
add_subdirectory(wiimoteServer)

